[package]
name = "rocket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
base64 = "0.13"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11.4", features = ["json", "rustls-tls"] }
chrono = { version = "0.4.19", features = ["serde"]}
async-trait = "0.1.51"
